Education Tab Added

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 				</ul>
 			</div>
 			<!-- ======================= Research Interest ============ -->
-			<div class="home-projects">
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="project-title animated fadeInUp">
@@ -135,14 +134,40 @@
 						</div>
 					</div>
 				</div>
-			</div>
+
+				<div class="row">
+					<div class="col-md-6 col-sm-12">
+						<div class="project-title animated fadeInUp">
+							<h2>Education</h2>
+							<p><b><span style="color: white;">Ph.D. in Geophysics (ongoing since spring 2021)</span></b>
+							Center for Earthquake Research and Information (CERI), Univeristy of Memphis, USA</p>
+
+							<p><b><span style="color: white;">Master of Science in Geology (Specilization: Engineering Geology) (2017)</span></b>
+							Centeral Department of Geology, Tribhuvan University, Kathmandu, Nepal</p>
+
+							<p><b><span style="color: white;">Bachelor of Science in Geology (2014)</span></b>
+							Tri-Chandra Multiple Campus, Tribhuvan University, Kathmandu, Nepal</p>
+
+							<br>
+							<a href="#" class="lightblure-button"> Go to Top</a>
+						</div>
+					</div>
+					<!-- ======================= Recent Field Photograph ============ -->
+					<div class="col-md-6 col-sm-12">
+						<div class="slider">
+							
+							<div class="slide">
+								<img src="img/image6.jpg" alt="Image 2"></div>
+								<figcaption>Geophysical investigation of underground water content zones using electrical resistivity tomography in Kathmandu valley Nepal </figcaption>
+								<div class="slide"><img src="img/image5.jpg" alt="Image 3"></div>
+								<figcaption>Seismic Refraction Tomography and MASW Survey for Geotechnical Evaluation Pokhara Valley sediment, Nepal</figcaption>
+							
+						</div>
+					</div>
+				</div>
+
 
 				<style>
-					.home-projects {
-						display: flex;
-						align-items: center;
-						justify-content: center;
-					}
 
 					.project-title {
 						margin-right: 20px;
