--- a/index.html
+++ b/index.html
@@ -147,8 +147,18 @@
 
 							<p><b><span style="color: white;">Bachelor of Science in Geology (2014)</span></b>
 							Tri-Chandra Multiple Campus, Tribhuvan University, Kathmandu, Nepal</p>
-
 							<br>
+							<h2>Experience</h2>
+							<p><b><span style="color: white;">Graduate Research Assistant (Jan. 2021 - Present)</span></b>
+								Center for Earthquake Research and Information (CERI), Univeristy of Memphis, USA</p>
+	
+							<p><b><span style="color: white;">Geophysicist, Founding Member (August 2017 - Present)</span></b>
+								<a href="https://manifoldconsult.com.np/"> Manifold Consult Pvt. Ltd.</a>, Kathmandu, Nepal</p>
+
+							<p><b><span style="color: white;">Assistant Geologist (Nov. 2016 - August 2017)</span></b>
+									Center for Geo-Environment and Engineering Research (CGER), Lalitpur, Nepal</p>
+							<p><b><span style="color: white;">Field Geologist (Dec. 2014 - Nov. 2016)</span></b>
+										Various Consulting Firm & Government Projects in Nepal </p>
 							<a href="#" class="lightblure-button"> Go to Top</a>
 						</div>
 					</div>
