--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<style>
+		.custom-icon {
+		  width: 22px; /* Adjust the width to your desired size */
+		  height: 22px; /* Adjust the height to your desired size */
+		  fill: white; /* Change the color to white */
+		}
+	  </style>
 
 </head>
 <body>
@@ -96,12 +103,13 @@
 					I began my journey at the Tribhuvan University's <a href="https://cdgltu.edu.np/" style="color: lightblue;">Central Department of Geology</a> and am now based at the University of Memphis's <a href="https://www.memphis.edu/ceri/" style="color: lightblue;">Center for Earthquake Research and Information</a> (CERI). 
 					I am a proud member of CERI's <a href="http://www.ceri.memphis.edu/people/thgoebel/index.html" style="color: lightblue;">Earthquake Physics Group </a>(EPG).
 					<span class="blue">More </span><span class="green">about me</span> Explore website </p>
-				<ul class="list-icons animated fadeInUp">
-					<li><i class="icon-trophy"></i></li>
-					<li><i class="icon-badge"></i></li>
-					<li><i class="icon-magic-wand"></i></li>
-					<li><i class="icon-screen-desktop"></i></li>
-				</ul>
+					<br>
+					<p>
+						<i class="fas fa-download pr-1 fa-fw"></i>
+						Download my <a href=/uploads/resume.pdf target=_blank>resumé</a>
+						.
+					</p>
+				
 			</div>
 			<!-- ======================= Research Interest ============ -->
 				<div class="row">
@@ -446,7 +454,7 @@
 							<br>
 							The University of Memphis
 							<br>
-							2890 Central Ave. Memphis, TN, 38152
+							3876 Central Ave. Memphis, TN, 38152
 							<br>
 							<a href="mailto:nthapa@memphis.edu">nthapa@memphis.edu</a>
 						</p>
@@ -470,7 +478,12 @@
 				  </li>
 				  <li class="list-inline-item">
 					<a href="https://github.com/nvnsthapa">
-					  <i class="fab fa-github fa-2x"></i>
+					  <i class="fab fa-github fa-2x" ></i>
+					</a>
+				  </li>
+				  <li>
+					<a href="https://scholar.google.com/citations?user=G-T459UAAAAJ&hl=en" target="_blank" rel="noopener" aria-label="Google Scholar">
+					  <img src="img/google-scholar.svg" alt="Custom Icon" class="custom-icon">
 					</a>
 				  </li>
 				</ul>
