--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 	<title>Navin Thapa - Graduate Doctoral Researcher</title>
+	<link rel="icon" type="image/png" href="img/logo.png">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -20,6 +21,18 @@
 		  height: 22px; /* Adjust the height to your desired size */
 		  fill: white; /* Change the color to white */
 		}
+		.site-icon {
+        display: inline-block;
+        vertical-align: middle;
+        width: 50px; /* Adjust the width as needed */
+        height: 50px; /* Adjust the height as needed */
+        margin-right: 10px; /* Adjust the spacing between the icon and the text */
+   		}
+    	.site-title {
+			display: inline-block;
+			vertical-align: middle;
+			margin: 0;
+   	 }
 	  </style>
 
 </head>
@@ -29,7 +42,10 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="site-branding">
-						<a href="#"><h1>Navin Thapa</h1></a>
+						<a href="#">
+							<img src="img/logo.png" alt="Logo" class="site-icon">
+							<h1 class="site-title">Navin Thapa</h1>
+						</a>
 					</div>
 				</div>
 				<a href="#" class="toggle-nav hidden-md hidden-lg">
@@ -106,7 +122,7 @@
 					<br>
 					<p>
 						<i class="fas fa-download pr-1 fa-fw"></i>
-						Download my <a href=/uploads/resume.pdf target=_blank>resumé</a>
+						Download my <a href=img/resume.pdf target=_blank>resumé</a>
 						.
 					</p>
 				
