--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<style>
 		.custom-icon {
-		  width: 22px; /* Adjust the width to your desired size */
-		  height: 22px; /* Adjust the height to your desired size */
-		  fill: white; /* Change the color to white */
+			width: 22px; /* Adjust the width to your desired size */
+			height: 22px; /* Adjust the height to your desired size */
+			fill: white; /* Change the color to white */
 		}
 		.site-icon {
-        display: inline-block;
-        vertical-align: middle;
-        width: 50px; /* Adjust the width as needed */
-        height: 50px; /* Adjust the height as needed */
-        margin-right: 10px; /* Adjust the spacing between the icon and the text */
+			display: inline-block;
+			vertical-align: middle;
+			width: 50px; /* Adjust the width as needed */
+			height: 50px; /* Adjust the height as needed */
+			margin-right: 10px; /* Adjust the spacing between the icon and the text */
    		}
     	.site-title {
 			display: inline-block;
 			vertical-align: middle;
 			margin: 0;
-   	 }
+   	 	}
+		
 	  </style>
 
 </head>
@@ -358,6 +359,18 @@
 		<div id="menu-3" class="content project-section container">
 			<div class="grid-container">
 				<div class="grid-x grid-margin-x t-bump-3">
+					<div class="cell">
+					  <!-- ===============================2020 ========= -->
+					  <h5>2023</h5>
+					</div>
+					<div class="cell medium-1">
+					  <p>03</p>
+					</div>
+					<div class="cell medium-11">
+					  <p> Goebel, T., Kwiatek,G., Davidsen, J., Thapa, N., Georg, D., (2023) Micro-Seismicity Clustering, Aftershock Decay and b-Values During Laboratory Fracture and Stick-Slip Experiments, Annual Meeting 2023 Seismological Society of America, V.94, 2B, pp.1152 </p>
+					</div>
+				  </div>
+				<div class="grid-x grid-margin-x t-bump-3">
 				  <div class="cell">
 					<!-- ===============================2020 ========= -->
 					<h5>2020</h5>
@@ -430,6 +443,7 @@
 					</div>
 				</div>
 			</div>
+			
 		</div>
 		<!-- ======================= Contact Me ============ -->
 		<div id="menu-5" class="content contact-section container">
