--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- Introduction -->
 
         <div class="col text-justify p-0">
-            Greetings, sir! I, Navin Thapa, am a Seismology-focused doctoral candidate in geophysics. 
+            Namaste! I, Navin Thapa, am a Seismology-focused doctoral candidate in geophysics. 
             Exploring the Earth's seismic activities and comprehending the dynamics of earthquakes and 
             other geological phenomena are subjects that captivate my attention. Through the analysis of 
             seismic data and participation in numerous seismic research projects, I have contributed to our 
