--- a/cv/cv.html
+++ b/cv/cv.html
@@ -136,7 +136,7 @@
 		</div>
 	
 		<div class="card mt-3 p-3">
-			<h3 class="card-title">Research Areas</h3>
+			<h3 class="card-title">Research Interest</h3>
 			<div>
 			
 				<ul class="card-text font-weight-light list-group list-group-flush">
