--- a/projects/projects.html
+++ b/projects/projects.html
@@ -86,7 +86,7 @@
   <div class="content">
     
   <h1>Current Research Projects</h1>
-  <h6>some of the projects I am working</h6>
+  <h6>some of the projects I am working on</h6>
 <!-- Project 1 -->
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
