--- a/more/more.html
+++ b/more/more.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Navin Thapa | teaching</title>
+  <title>Navin Thapa | more </title>
   <meta name="description" content="Personal website of Navin Thapa.">
 
   <!-- Fonts and Icons -->
