--- a/projects/project_bvalue/bvalue.html
+++ b/projects/project_bvalue/bvalue.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Navin Thapa | Project 2</title>
+  <title>Navin Thapa | bvalue</title>
   <meta name="description" content="Personal website of Navin Thapa.">
 
   <!-- Fonts and Icons -->
