--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <a href="mailto:nthapa@memphis.edu"><i class="fa fa-envelope-square gm-icon"></i></a>
             <a href="https://github.com/nvnsthapa" target="_blank" title="GitHub"><i class="fab fa-github-square gh-icon"></i></a>
             <a href="https://www.linkedin.com/in/nvnsthapa/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin li-icon"></i></a>
-            <a href="https://scholar.google.com/citations?user=G-T459UAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square gs-icon"></i></a>
+            <a href="https://scholar.google.com/citations?user=G-T459UAAAAJ&hl=en" target="_blank" title="Google Scholar">
+                <i class="fas fa-graduation-cap"></i>
+            </a>
+            
             </span>
             </div>
 
@@ -123,31 +126,48 @@
         <!-- Introduction -->
 
         <div class="col text-justify p-0">
-            Namaste! I, Navin Thapa, am a Seismology-focused doctoral candidate in geophysics. 
-            Exploring the Earth's seismic activities and comprehending the dynamics of earthquakes and 
-            other geological phenomena are subjects that captivate my attention. Through the analysis of 
-            seismic data and participation in numerous seismic research projects, I have contributed to our 
-            knowledge of the Earth's structure and seismic hazards. My objective is to make a scholarly 
-            contribution to the field of seismology while simultaneously enhancing the well-being and 
-            capacity of communities residing in areas prone to earthquakes. We shall embark on an exhilarating 
-            expedition as we jointly delve into the mesmerizing realm of seismology.
-            Over the years, a multitude of geoscientists have affirmed that the Earth possesses the quality 
-            of adaptability in the face of novel circumstances. One of the mechanisms underlying such alterations 
-            is earthquakes, which never cease to intrigue me. With a strong commitment to fulfilling my life's 
-            purpose of aiding both the local community and the global community, I made the deliberate choice to 
-            undertake a doctoral program in seismology. Nepal, from which I originate, is situated in the central 
-            region of the Himalayas, an area characterized by an active tectonic orogeny that renders it highly 
-            susceptible to perpetual seismic vulnerability, shallow focus, and large earthquakes. This singular 
-            occurrence has sparked my interest in the discipline of seismology. My professional trajectory commenced
-             at the Central Department of Geology at Tribhuvan University and has since transitioned to the Center for
-              Earthquake Research and Information (CERI) at the University of Memphis. I am honored to be a member of the
-               Earthquake Physics Group (EPG) at CERI.
+            I am a Seismology-focused doctoral researcher in geophysics. I am passionate about studying the mechanisms of earthquakes in subduction zones, volcanic settings, and laboratory-created faults.
+            I am working at the Earthquake Physics Lab, led by Dr. Thomas Goebel, at  <a href="https://www.memphis.edu/ceri/">Center for Earthquake Research and Information</a>, University of Memphis. 
+            <p> </p>
+            <p>
+
+                The work in the <a href="https://example.com">Earthquake Physics Laboratory</a> focuses on many aspects of seismology, such as fault slip, friction, and seismic energy radiation. 
+                I study laboratory earthquakes in fault labs, which exhibit structural similarities to faults in the upper crust and have seismic event statistics comparable to natural seismic activity.
+            </p>
+            <p> </p>
+
+
+            <p>
+                As a <strong>researcher</strong>
+                , I use theoritical, numerical, and laboratory experiment approach and explore:
+            </p>
+            <ul>
+                <li>
+                    How fault gouge composition affects repeating earthquakes and fault creep? Repeating earthquakes are events that originated from the same fault patch, thereby producing the same source mechanism and highly similar waveform.
+                </li>
+                <li>
+                    How different pore pressures in laboratory fault zones affect frequency-magnitude distributions and b-value?
+                </li>
+            </ul>
             
         </div>
 
         <!-- News -->
         <div class="news mt-3 p-0">
             <h1 class="title mb-4 p-0">Updates</h1>
+
+
+            <div class="row p-0">
+                <div class="col-sm-2 p-0">
+                    <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
+          Feb 07, 2024
+        </span>
+                </div>
+                <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+                    <p> <b> Research in a minute </b> series spolight of the <a href="https://university-of-memphis.shorthandstories.com/dr-thomas-goebel/index.html">Dr. Thomas Goebel and Earthquake Physics Lab</a> as the most active and accomplished researchers across various disciplines at the University of Memphis.
+                    </p>
+                </div>
+            </div>
 
 
             <div class="row p-0">
@@ -169,7 +189,19 @@
         </span>
                 </div>
                 <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-                    <p>Visited <a href="https://www.instagram.com/reel/CyCoB1wM_A5/?igsh=bG80cG5namJ0enpv">El Salvador</a> for setting up seismic network.
+                    <p>Visited <a href="https://www.instagram.com/reel/CyCoB1wM_A5/?igsh=bG80cG5namJ0enpv">El Salvador</a> for setting up seismic network for volcano seismicity.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row p-0">
+                <div class="col-sm-2 p-0">
+                    <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
+          Agugust 28, 2021
+        </span>
+                </div>
+                <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+                    <p>Joined <a href="http://www.ceri.memphis.edu/people/thgoebel/">Earthquake Physics Group</a> at CERI led by Dr. Thomas Goebel. 
                     </p>
                 </div>
             </div>
