--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <!-- Introduction -->
 
         <div class="col text-justify p-0">
-            I am a Seismology-focused doctoral researcher in geophysics. I am passionate about studying the mechanisms of earthquakes in subduction zones, volcanic settings, and laboratory-created faults.
+            I am a Seismology-focused doctoral researcher in geophysics. I am passionate about studying the physics of faulting and mechanism of earthquakes in subduction zones, volcanic settings, and laboratory-created faults.
             I am working at the Earthquake Physics Lab, led by Dr. Thomas Goebel, at  <a href="https://www.memphis.edu/ceri/">Center for Earthquake Research and Information</a>, University of Memphis. 
             <p> </p>
             <p>
@@ -139,7 +139,7 @@
 
             <p>
                 As a <strong>researcher</strong>
-                , I use theoritical, numerical, and laboratory experiment approach and explore:
+                , I use theoritical, numerical, and laboratory experimental approach in exploring:
             </p>
             <ul>
                 <li>
@@ -194,10 +194,23 @@
                 </div>
             </div>
 
+
             <div class="row p-0">
                 <div class="col-sm-2 p-0">
                     <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
-          Agugust 28, 2021
+          May 15, 2023
+        </span>
+                </div>
+                <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+                    <p>Attended <a href="https://drive.google.com/file/d/1VVWZbWzN80ykizXc1oJTgafBuMZ5vec0/view">second CERI annual field trip</a> to southern california, May 15-19, 2023.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row p-0">
+                <div class="col-sm-2 p-0">
+                    <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
+          Aug 28, 2021
         </span>
                 </div>
                 <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
