--- a/more/more.html
+++ b/more/more.html
@@ -142,7 +142,7 @@
     </div>
     <h6 class="font-italic mt-2 mt-sm-0">In University of Wisconsin-Madison Campus by <a href="https://www.earthscope.org/">EarthScope</a></h6>
     <ul class="card-text font-weight-light list-group list-group-flush">
-      <li class="list-group-item">This <a href="https://www.earthscope.org/event/2023-das-workshop/">workshop</a> provided an opportunity to bring together the Distributed Acoustic Sensing (DAS) community</li>
+      <li class="list-group-item">This <a href="https://www.earthscope.org/event/2023-das-workshop/">workshop</a> provided an opportunity to meet and share DAS research together with the Distributed Acoustic Sensing (DAS) community.</li>
     </ul>
   </div>
 </div>
@@ -167,20 +167,37 @@
   </div>
 </div>
 
+<h3 class="mt-4">Field Trip</h3>
 
-<h3 class="mt-4">Field work photos</h3>
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Second CERI Annual Field Trip to Southern California</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle">
+            05/2023
+        </span>
+      </div>
+    </div>
+    <ul class="card-text font-weight-light list-group list-group-flush">
+      <li class="list-group-item"><a href="https://drive.google.com/file/d/1VVWZbWzN80ykizXc1oJTgafBuMZ5vec0/view">Poster</a> on <b>Highlights from the Second CERI Annual Field Trip to Southern California, May 15-19, 2023 </b>was presented in SCEC Annual meeting 2023</li>
+      <h4 class="mt-4">Field work photos</h4>
 
-    <div class="your-class">
+      <div class="your-class">
         <div>
             <img src="/assets/img/field/cali1.jpg" alt="Image 1">
-            <p>Group photo in Souther California</p>
+            <p style="text-align: center;">Group photo in Souther California</p>
         </div>
-        <div>
-            <img src="/assets/img/field/cali2.jpg" alt="Image 2">
-            <p>Group Photo in Bombay Beach, CA</p>
-        </div>
-        <!-- Add more slides as needed -->
-    </div>
+    
+      </div>
+      </ul>
+  </div>
+</div>
+
+
+
   <!-- Footer -->
   <footer>
     &copy; Copyright 2024 Navin Thapa.
