--- a/more/more.html
+++ b/more/more.html
@@ -167,6 +167,39 @@
   </div>
 </div>
 
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Generalist Electromechanics for Applied Researchers (GEARs) Workshop</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle">
+            08/2022
+        </span>
+      </div>
+    </div>
+    <h6 class="font-italic mt-2 mt-sm-0"><a href="https://leemangeophysical.com">Leeman Geophysical LLC</a>, Siloam Springs, Arkansas</h6>
+    <ul class="card-text font-weight-light list-group list-group-flush">
+      <li class="list-group-item">— <a href="https://leemangeophysical.com/gears-2022-workshop/?mc_cid=dd4374db4e&mc_eid=5ee0f14c2b">Project</a>: Construction of Magnetometer using Arduino board and sensors
+         .</li>
+      <li class="list-group-item">— Hands-on training on welding, grinding, cutting, gluing, lasering, milling etc.</li>
+      <li class="list-group-item">— Sensors communications with controllers and each other. </li>
+      <li class="list-group-item">— Created a data logging program to run on a microcontroller and collect/store measurements. </li>
+      </ul>
+      <li class="list-group-item"> 
+      <div class="your-class">
+        <div>
+            <img src="/assets/img/more/magnetometer.jpg" alt="Image 1">
+            <p style="text-align: center;">Magnetometer Group ( Photo Credit:  <a href="https://x.com/geo_leeman?s=21&t=uuxfETnuhyCVA0LtUtNbgQ">Dr. John Leeman</a> )</p>
+        </div>
+    
+      </div>
+    </li>
+      
+  </div>
+</div>
+
 <h3 class="mt-4">Field Trip</h3>
 
 <div class="card mt-3">
