--- a/index.html
+++ b/index.html
@@ -152,9 +152,23 @@
             
         </div>
 
-        <!-- News -->
+        <!-- -------------------------------------------UPDATES--------------------------------- -->
         <div class="news mt-3 p-0">
             <h1 class="title mb-4 p-0">Updates</h1>
+
+            <div class="row p-0">
+                <div class="col-sm-2 p-0">
+                    <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
+          Apr 22, 2024
+        </span>
+                </div>
+                <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+                    <p> <b> News and Impact feature on UofM Division of Research and Innovation for </b> 
+                         <a href="https://www.memphis.edu/research/impact/newsletter_2024/april24_stories/uofm_research_center_launches_collaboration_with_el_salvador.php"> building new seismic network around Santa Ana volcano, El Salvador during the fall of 2023</a> in collaboration with El Salvador
+                   
+                        </p>
+                </div>
+            </div>
 
 
             <div class="row p-0">
