--- a/index.html
+++ b/index.html
@@ -159,6 +159,33 @@
             <div class="row p-0">
                 <div class="col-sm-2 p-0">
                     <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
+          June 3, 2024
+        </span>
+                </div>
+                <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+                    <p> Attended<b> pyRATES: Python and R Analysis of Time SerieS </b> at Del Rey, CA
+                        <a href="https://linked.earth/FROGS/"> FROG: A workshop in science pratice and publishing
+                           </a>
+                </div>
+            </div>
+
+            <div class="row p-0">
+                <div class="col-sm-2 p-0">
+                    <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
+          May 20, 2024
+        </span>
+                </div>
+                <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+                    <p> Attended<b> SCOPED Workshop 2024: CyberTraining for Seismology </b> in University of Washington, Seattle, WA, USA. <b>Present Poster</b>on
+                        <a href="assets/pdf/SCOPED24_POSTER.pdf"> Community Seismic Network in the Apaneca-Ilamatepec-Coatepeque 
+                           Volcanic Complex in El Salvador.
+                           </a>
+                </div>
+            </div>
+
+            <div class="row p-0">
+                <div class="col-sm-2 p-0">
+                    <span class="badge primary-color font-weight-bold text-uppercase align-middle date ml-3">
           Apr 22, 2024
         </span>
                 </div>
