--- a/publications/publications.html
+++ b/publications/publications.html
@@ -123,7 +123,8 @@
       </div>
 
       <div class="col p-0">
-        <a class="badge grey waves-effect font-weight-light mr-1" data-toggle="collapse" href="#goebel-2025-santaAna-abstract" role="button" aria-expanded="false" aria-controls="goebel-2025-santaAna-abstract">Abstract</a>    
+        <!-- <a class="badge grey waves-effect font-weight-light mr-1" data-toggle="collapse" href="#goebel-2025-santaAna-abstract" role="button" aria-expanded="false" aria-controls="goebel-2025-santaAna-abstract">Paper</a>   -->
+        <a class="badge grey waves-effect font-weight-light mr-1" href="https://doi.org/10.1785/0220240343" target="_blank">Paper</a>  
           <div
             class="__dimensions_badge_embed__"
             data-doi="10.1785/0220240343"
@@ -261,8 +262,47 @@
     </div>
   </div>
 </div>
-</li></ol>
+
+
+
+<div class="row m-0 p-0" style="border-bottom: 1px solid #ddd;">
+  <div class="col-sm-11 p-0">
+    <ol class="bibliography"><li><div class="row m-0 mt-3 p-0">
+
+<div class="col-sm-11 mt-2 mt-sm-0 p-0 pl-xs-0 pl-sm-4 pr-xs-0 pr-sm-2">
+  
+  <div id="thapa-2025-bvalue-dataset" class="col p-0">
+    <h5 class="title mb-0">b-value Variations with Pore Pressure: Acoustic Emission, Pore Pressure, Injection and Mechanical Laboratory Testing Data</h5>
+    <div class="author">
+               <nobr><em>Navin Thapa</em>,</nobr>    
+              and
+                <nobr><a href="https://www.memphis.edu/ceri/people/faculty/thomas-goebel.php" target="_blank">Thomas H. Goebel</a></nobr>
     </div>
+
+    <div>
+      <p class="periodical font-italic">
+        Mendeley Data, V1, doi: <a href="https://doi.org/10.17632/cg7xx3j59h.1" target="_blank">10.17632/cg7xx3j59h.1</a> (2025)
+      </p>
+    </div>
+
+    <div class="col p-0">
+      <a class="badge grey waves-effect font-weight-light mr-1" data-toggle="collapse" href="#thapa-2025-bvalue-dataset-abstract" role="button" aria-expanded="false" aria-controls="thapa-2025-bvalue-dataset-abstract">Abstract</a>
+      <a class="badge grey waves-effect font-weight-light mr-1" href="https://doi.org/10.17632/cg7xx3j59h.1" target="_blank">Dataset</a>
+    </div>
+    
+    <div class="col mt-2 p-0">
+      <div id="thapa-2025-bvalue-dataset-abstract" class="collapse">
+        <div class="abstract card card-body font-weight-light mr-0 mr-sm-3 p-3">
+          This dataset contains acoustic emission, pore pressure, injection and mechanical laboratory testing data related to b-value variations with pore pressure. The data supports research on how different pore pressures in laboratory fault zones affect frequency-magnitude distributions and b-values in seismic events. This dataset is analyzed in "Does b-value increase with higher pore-pressure?: Insight from laboratory experiments and induced seismicity"
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</li></ol>
+
+  </div>
     <div class="col-sm-1 align-self-end mt-2 p-0 pr-1">
       <h3 class="bibliography-year">2025</h3>
     </div>
@@ -815,7 +855,6 @@
       <h3 class="bibliography-year">2021</h3>
     </div>
   </div>
-
 
   <!-- Footer -->
   <footer>
