--- a/cv/cv.html
+++ b/cv/cv.html
@@ -117,7 +117,7 @@
 					
 						<tr>
 							<td class="p-0 pr-2 font-weight-bold text-right"><b>Office</b></td>
-							<td class="p-0 pl-2 font-weight-light text-left">3876 Central Ave. Room 101, Memphis, TN, 38152, USA</td>
+							<td class="p-0 pl-2 font-weight-light text-left">3876 Central Ave., Memphis, TN, 38152, USA</td>
 						</tr>
 					
 						<tr>
