--- a/projects/projects.html
+++ b/projects/projects.html
@@ -84,7 +84,7 @@
 
   <!-- Content -->
   <div class="content">
-    
+
   <h1>Current Research Projects</h1>
   <h6>some of the projects I am working on</h6>
 <!-- Project 1 -->
@@ -140,7 +140,7 @@
           <img class="card-img-top" src="/assets/img/project_bvalue/volcanoSeis.jpg" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title text-lowercase">Volcano Seismicity</h5>
-            <p class="card-text">volcano seismicity</p>
+            <p class="card-text">1. Project Description<br><a href="http://www.ceri.memphis.edu/people/thgoebel/seismic_map2.html" target="_blank">2. View interactive seismicity map</a></p>
             <div class="row ml-1 mr-1 p-0">
             </div>
           </div>
