--- a/cv/cv.html
+++ b/cv/cv.html
@@ -67,6 +67,12 @@
           
             
 			  <li class="nav-item ">
+				<a class="nav-link" href="/blogs/blogs.html">
+					Blogs
+				</a>
+			  </li>
+
+			  <li class="nav-item ">
 				<a class="nav-link" href="/more/more.html">
 					More
 			
