--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
                     </li>
 
                     <li class="nav-item ">
+                        <a class="nav-link" href="/blogs/blogs.html">
+                    Blogs
+                    
+                  </a>
+                    </li>
+
+                    <li class="nav-item ">
                         <a class="nav-link" href="/more/more.html">
                     More
                     
