--- a/more/more.html
+++ b/more/more.html
@@ -95,6 +95,12 @@
               </li>
           
             
+              <li class="nav-item ">
+                  <a class="nav-link" href="/blogs/blogs.html">
+                    Blogs
+                  </a>
+              </li>
+
               <li class="nav-item navbar-active font-weight-bold">
                   <a class="nav-link" href="/more/more.html">
                     More
