First Blog added

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -89,7 +89,7 @@
     <!-- Add your blog content here -->
     <div class="container-fluid p-0 text-justify">
       <div class="blog-card">
-        <div class="blog-thumbnail" onclick="toggleBlogContent('blog1')">
+        <a href="/blogs/journey-as-geophysicist.html" class="blog-thumbnail">
           <div class="blog-info">
             <h3>Journey as a Geophysicist in Nepal: From Classroom to the Himalayas</h3>
             <p class="blog-excerpt">After completing my Master's degree in Geology, I stepped out of the academic world and into the rugged terrain of Nepal's high mountains. I was excited, nervous, and ready to apply my knowledge in the field. My first role was with....</p>
@@ -97,45 +97,7 @@
           <div class="blog-image">
             <img src="/assets/img/blogs/geophysics1.jpg" alt="Blog thumbnail">
           </div>
-        </div>
-        <div id="blog1" class="blog-content">
-          <h2>Journey as a Geophysicist in Nepal: From Classroom to the Himalayas</h2>
-          <div class="blog-meta">
-            <span class="date">March 15, 2024</span>
-            <span class="category">Technology</span>
-          </div>
-          <div class="blog-body">
-            <p>After completing my Master's degree in Geology, I stepped out of the academic world and into the rugged terrain of Nepal's high mountains. I was excited, nervous, and ready to apply my knowledge in the field. My first role was with a geophysical consulting company, where I began my journey conducting surveys for critical infrastructure projects like hydropower plants, dams, and bridges.</p>
-            <p>Working as a geophysicist in Nepal isn't your typical 9-to-5 job. It meant waking up before dawn, hiking for hours—often in extreme conditions—and carrying sensitive instruments over narrow trails and rocky cliffs. Our teams were small but resilient, and every day brought a new challenge, whether it was technical, logistical, or environmental.</p>
-    
-          <figure style="text-align: center;">
-            <img src="/assets/img/blogs/geophysics1.jpg" alt="Blog thumbnail" style="width: 60%;">
-            <figcaption style="font-style: italic;">Early days in the field – setting up geophysical equipment deep in the Himalayan foothills.</figcaption>
-          </figure>
-          <p>In the photo above, I was setting up a resistivity meter in a remote gorge. We had to cover the equipment with plastic to protect it from constant drizzles and jungle moisture. Vegetation was thick, the terrain steep, and often we had to troubleshoot using only what we could carry in our packs.</p>
-          <p>Despite the challenges, I found the work deeply fulfilling. There was something incredibly grounding about being surrounded by nature's raw beauty while working on projects that could change lives—bringing electricity to villages or making remote travel routes safer.</p>
-          <p>This job taught me more than just geophysics. It taught me teamwork, adaptability, and patience. It showed me the importance of listening to local communities and learning from their knowledge of the land. And above all, it gave me a sense of purpose.</p>
-          <p> I'll be sharing more about specific projects and experiences—including the tools we used, the science behind our work, and the stories of the people we met along the way—in upcoming posts.</p>
-          </div>
-          <div class="social-share">
-            <h4>Share this post</h4>
-            <div class="share-buttons">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nvnsthapa.github.io/blogs/blogs.html" target="_blank" class="share-button facebook">
-                <i class="fab fa-facebook-f"></i> Facebook
-              </a>
-              <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://nvnsthapa.github.io/blogs/blogs.html&title=Journey%20as%20a%20Geophysicist%20in%20Nepal" target="_blank" class="share-button linkedin">
-                <i class="fab fa-linkedin-in"></i> LinkedIn
-              </a>
-              <a href="https://twitter.com/intent/tweet?text=Journey%20as%20a%20Geophysicist%20in%20Nepal&url=https://nvnsthapa.github.io/blogs/blogs.html" target="_blank" class="share-button twitter">
-                <i class="fab fa-x-twitter"></i> X
-              </a>
-              <a href="https://www.instagram.com/share?url=https://nvnsthapa.github.io/blogs/blogs.html" target="_blank" class="share-button instagram">
-                <i class="fab fa-instagram"></i> Instagram
-              </a>
-            </div>
-          </div>
-        </div>
-        </div>
+        </a>
       </div>
     </div>
 
