--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -91,8 +91,8 @@
       <div class="blog-card">
         <a href="/blogs/journey-as-geophysicist.html" class="blog-thumbnail">
           <div class="blog-info">
-            <h3>Journey as a Geophysicist in Nepal: From Classroom to the Himalayas</h3>
-            <p class="blog-excerpt">After completing my Master's degree in Geology, I stepped out of the academic world and into the rugged terrain of Nepal's high mountains. I was excited, nervous, and ready to apply my knowledge in the field. My first role was with....</p>
+            <h3>In the Footsteps of Rivers and Rocks: A Geophysicist’s Himalayan Story</h3>
+            <p class="blog-excerpt">After completing my Master's degree in Geology, I stepped out of the academic world and into the rugged terrain of Nepal's high mountains. I was excited, nervous, and ready to apply my knowledge in the field. My first role was with ....</p>
           </div>
           <div class="blog-image">
             <img src="/assets/img/blogs/geophysics1.jpg" alt="Blog thumbnail">
