--- a/blogs/journey-as-geophysicist.html
+++ b/blogs/journey-as-geophysicist.html
@@ -96,7 +96,7 @@
 
           <figure style="text-align: center;">
             <img src="/assets/img/blogs/river.jpg" alt="Blog thumbnail" style="width: 60%;">
-            <figcaption style="font-style: italic;">Taking a break during our 8-day hike to the project site, fully loaded with gear and supplies.</figcaption>
+            <figcaption style="font-style: italic;">Midway through our trek, the river gave us a reason to keep going.</figcaption>
           </figure>
 
           <P>At the end of each trip, there were moments of silence like this one, by a rushing river in the heart of the forest, where everything made sense. The sound of water carving through stone, the untouched wilderness around us, and the quiet reward of purpose after long workdays.</P>
